# niom

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  STYLE_GUIDE.md  components.json  forge.config.ts  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.json  vite.config.ts  webpack.main.config.ts  webpack.renderer.config.ts  webpack.rules.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-release.yml  build.yml  ci.yml  release-please.yml  update-manifests.yml
Casks/: niom.rb
assets/: icon.icns
bucket/: niom.json
niom-ai/: package-lock.json  package.json  tsconfig.json
niom-ai/src/: config.ts  crypto.ts  index.ts  threads.ts
resources/: app-update.yml
scripts/: build-sidecar.js  generate-update-manifest.js
src/: App.tsx  Markdown.tsx  index.css  index.html  index.ts  preload.ts  renderer.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs
src/components/: ArtifactsList.tsx  Icons.tsx  ModelSelector.tsx  Orb.tsx  ToolCallDisplay.tsx  UpdateBanner.tsx  WindowHeader.tsx  artifact-preview-card.tsx  confirm-delete-button.tsx  context-graph.tsx  orb.css  prompt-box.tsx  status-bar.tsx  task-panel.tsx  titlebar.tsx  tool-approval-card.tsx  tool-result-card.tsx
src/hooks/: use-keyboard-shortcuts.ts  use-niom-chat.ts  (+5 more)
(+160 files in other folders)
