[package]
name = "niom"
version = "0.1.0"
description = "NIOM — Neural Interface Operating Model"
authors = ["NIOM Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/niomstack/niom"
edition = "2021"

[lib]
name = "niom_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-log = "2.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
png = "0.17"
dirs = "6"
reqwest = { version = "0.12", features = ["blocking", "json"] }
